2004-03-25  Lars Clausen  <lars@raeder.dk>

	* app/persistence.c (persistence_load_string): Missing semicolon?!?

2004-03-24  Lars Clausen  <lars@raeder.dk>

	* RELEASE-PROCESS: 

	* app/persistence.[ch]: 
	* app/paginate_psprint.c (diagram_print_ps): New type of data can
	be stored persistently:  Strings.  Only the printer command/file
	go in here now, but things like creator, organization, diagram
	comments etc could also be handled this way.

	* objects/standard/beziergon.c (beziergon_draw): Avoid control
	lines when the object is not selected.

2004-03-23  Lars Clausen  <lars@raeder.dk>

	* lib/connectionpoint.h: 
	* app/load_save.c: Allow connection points to have names, and
	handle that in load/store.

	* lib/dialibartrenderer.c: Better highlighting for text.

	* lib/diagdkrenderer.h (struct _DiaGdkRenderer): 
	* lib/diagdkrenderer.c: Better highlighting for all, using same
	principles as libart highlighter.

2004-03-22  Lars Clausen  <lars@raeder.dk>

	* lib/dialibartrenderer.[ch]: 
	* lib/diagdkrenderer.c: 
	* lib/object.h: 
	* app/object_ops.c:
	* app/diagram.[ch]:
	* app/display.[ch]:
	* app/Makefile.am: 
	* app/modify_tool.c: 
	* app/create_object.c: 
	* app/highlight.[ch]: 
	Added simple object highlighting.  In GDK rendering, highlights
	the bbox, in libart highlights the outline of the object (except
	for texts).

2004-03-22  Lars Clausen  <lars@raeder.dk>

	* RELEASE-PROCESS: Added info on how to do a branch for
	development during release process.

2004-03-20  Lars Clausen  <lars@raeder.dk>

	* RELEASE-PROCESS: Mention PATCH keyword in release process.

2004-03-19  Lars Clausen  <lars@raeder.dk>

	* xmldocs.make: Fixed apparent uninstall error.

	* config.h.win32: 
	* doc/en/dia-manual.xml: 
	* doc/pl/dia-manual.xml: 
	* dia.spec: 
	* configure.in: 
	* NEWS: Version 0.93-pre1.

	* lib/dialinechooser.[ch]: Patch from pborelli@katamail.com (paolo
	borelli):  Remove some deprecated stuff.

2004-03-18  Lars Clausen  <lars@raeder.dk>
